demo/manifests/4-redirects-and-rewrites/path-redirects/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-redirect
  namespace: httpbin
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["httpbin.apps.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /redirect
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /headers
            statusCode: 302
